Fix qbittorrent config

--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -358,7 +358,7 @@
                         </div>
                         <div class="col-md-6">
                             <label>User</label>
-                            <input type="text" data-id="pass" class="form-control" placeholder="" value="${config['Torrent']['QBittorrent']['pass']}">
+                            <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['QBittorrent']['user']}">
                         </div>
                         <div class="col-md-6">
                             <label>Password</label>
