Minor css tweaks

--- a/static/css/themes/Default.less
+++ b/static/css/themes/Default.less
@@ -8,7 +8,7 @@
 
 @bg-color-main: #131619;
 @bg-color-inverse: #CCCCCC;
-@bg-color-accent: #131619; // Wells, title backgrounds
+@bg-color-accent: #0d1013; // Wells, title backgrounds
 @bg-color-dark: #262C32;
 @bg-color-stripe: #262C32;
 @bg-color-transparent: transparent;
