--- a/static/css/themes/theme_base.less
+++ b/static/css/themes/theme_base.less
@@ -3794,8 +3794,8 @@ a.btn.disabled {
 .btn-sm {
 	padding: 0.25em 0.75em;
 	font-size: 0.75em;
-
-	border-radius: 0;
+	line-height: 2.5em;
+	border-radius: @radius-button;
 }
 .btn-group-sm {
 	>.btn {
