--- a/templates/settings/search.html
+++ b/templates/settings/search.html
@@ -103,8 +103,11 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label>Usenet Server Retention [Days]</label>
+                    <label>Usenet Server Retention</label>
                     <input type="number" id="retention" class="form-control" min="0" placeholder="1500" value="${config['retention']}">
+                    <span class="input-group-addon">
+                        Days
+                    </span>
                 </div>
             </form>
 
