Fix poster in info modal

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -82,7 +82,7 @@
                         <div class="modal-body">
 
                             <div class="col-md-5">
-                                <img src="{img_url}" class="img-responsive">
+                                <img src="{poster_url}" class="img-responsive">
                             </div>
                             <div class="col-md-7">
                                 <div class="embed-responsive embed-responsive-16by9">
