Allow users to verify releases through predb or by home media release
Patricularly useful for non-english speaking users, this allows Watcher to start searching indexers based off of the home media release date rather than always relying on predb, which can often not have foreign-language releases.

Added a new method core.searcher.verify() to shift a movie from Waiting to Wanted. This method also removes the predb_backlog flag if a movie hasn't yet been found via predb. This allows Watcher to do a predb backlog search if the user switches back to predb. This change only happens when the search task is being executed, so switching to from predb to media release then back again right away wont trigger a backlog search through predb (since it wouldn't do us any good anyway).

This also has the side effect of eliminating core.search._backlog_movies() since vefication occurs elsewhere and that function can be replaced by a simple list comprehension.

Automatically converts config settings from predbcheck bool to verifyreleases string.

If the user enabled predb verification, core.rss.predb.check_all() must be called before core.searcher.verify(). Verify does not check predb, only the local flags. This may change later.

--- a/templates/settings/search.html
+++ b/templates/settings/search.html
@@ -41,14 +41,21 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label>Predb Check</label>
+                    <label>Verify Availability</label>
+                    <select id="verifyreleases" class="form-control select-sm" value="${config['verifyreleases']}">
+                        <option value="">Disabled</option>
+                        <option value="predb">PreDB</option>
+                        <option value="mediareleasedate">Home Media Release Date</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6">
+                    <label>Skip verification if Movie is older than [X] weeks.</label>
                     <div class="input-group">
                         <span class="input-group-addon box_box">
-                            <i id="predbcheck" class="mdi mdi-checkbox-blank-outline c_box" value="${config['predbcheck']}"></i>
+                            <i id="verifyreleasesskip" class="mdi mdi-checkbox-blank-outline c_box" value="${config['verifyreleasesskip']}"></i>
                         </span>
-                        <span class="input-group-item form-control">
-                            Check Predb before searching.
-                        </span>
+                        <input type="number" id="verifyreleasesskipweeks" class="form-control" min="0" placeholder="26" value="${config['verifyreleasesskipweeks']}">
                     </div>
                 </div>
 
