--- a/templates/settings/postprocessing.html
+++ b/templates/settings/postprocessing.html
@@ -22,7 +22,7 @@
         <link href="${url_base}/static/css/settings/postprocessing.css?v=06.02" rel="stylesheet">
 
         <script src="${url_base}/static/js/settings/shared.js?v=06.15"  type="text/javascript"></script>
-        <script src="${url_base}/static/js/settings/postprocessing.js?v=06.14"  type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/postprocessing.js?v=06.25"  type="text/javascript"></script>
     </head>
     <body>
         ${navbar}
@@ -84,20 +84,17 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label>Move Additional File Types</label>
-                    <input type="text" id="moveextensions" class="form-control" placeholder="srt, nfo" value="${config['moveextensions']}"  data-toggle="tooltip" title="Separate file extensions with commas.">
+                    <label>Move Method</label>
+                    <select class="form-control select-sm" id="movermethod" value="${config['movermethod']}">
+                        <option value="move">Move</option>
+                        <option value="hardlink">Hardlink</option>
+                        <option value="symboliclink" ${'disabled=true' if os == 'windows' else ''}>Symbolic Link</option>
+                    </select>
                 </div>
 
                 <div class="col-md-6">
-                    <label>Create Hardlinks</label>
-                    <div class="input-group">
-                        <span class="input-group-addon box_box">
-                            <i id="createhardlink" class="mdi mdi-checkbox-blank-outline c_box" value="${config['createhardlink']}"></i>
-                        </span>
-                        <span class="input-group-item form-control">
-                            Create hardlink for torrent seeding.
-                        </span>
-                    </div>
+                    <label>Move Additional File Types</label>
+                    <input type="text" id="moveextensions" class="form-control" placeholder="srt, nfo" value="${config['moveextensions']}"  data-toggle="tooltip" title="Separate file extensions with commas.">
                 </div>
 
                 <div class="col-md-6">
