--- a/templates/login.html
+++ b/templates/login.html
@@ -29,8 +29,8 @@
                     <input type="password" id="password" class="form-control">
                 </div>
             </div>
-            <div class="col-md-12">
-                <div class="input-group col-md-6 col-md-offset-3">
+            <div class="col-md-12 col-sm-12">
+                <div class="input-group col-md-6 col-md-offset-3 col-sm-12">
                     <a class="message btn btn-primary" onclick="login(event)">
                         <i class="mdi mdi-login"></i>
                     </a>
