Change menu border color var

--- a/static/css/themes/theme_base.less
+++ b/static/css/themes/theme_base.less
@@ -3924,7 +3924,7 @@ tbody.collapse.in {
 	background-clip: padding-box;
 	.divider {
 		margin: 0.5em 0;
-		border-bottom: 1px solid @border-color-main;
+		border-bottom: 1px solid @border-color-dropdown;
 	}
 	>li {
 		>a {
