Add noopener to all external links

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -74,7 +74,7 @@
                             <span class="label label-default">
                                 Score: {vote_average}
                             </span>
-                            <a class="label label-info" href="https://www.themoviedb.org/movie/{id}" target="_blank">
+                            <a class="label label-info" href="https://www.themoviedb.org/movie/{id}" target="_blank" rel="noopener">
                                 TheMovieDB <i class="mdi mdi-earth"></i>
                             </a>
                         </div>
