--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -110,10 +110,10 @@
             </ul>
 
             <div class="navbar-right btn-group">
-                <a class="btn text-primary" href="https://www.reddit.com/r/watcher/" target="_blank">
+                <a class="btn text-primary" href="https://www.reddit.com/r/watcher/" target="_blank" rel="noopener">
                     <i class="mdi mdi-reddit"></i>
                 </a>
-                <a class="btn text-primary" href="https://github.com/nosmokingbandit/watcher3" target="_blank">
+                <a class="btn text-primary" href="https://github.com/nosmokingbandit/watcher3" target="_blank" rel="noopener">
                     <i class="mdi mdi-github-circle"></i>
                 </a>
             </div>
