--- a/templates/settings/search.html
+++ b/templates/settings/search.html
@@ -143,7 +143,7 @@
 
                 <div class="col-md-6">
                     <label>Sync Popular Movies Every Day At
-                        <a href="https://github.com/sjlu/popular-movies" target="_blank">
+                        <a href="https://github.com/sjlu/popular-movies" target="_blank" rel="noopener">
                             &nbsp;<i class="mdi mdi-help-circle-outline"></i>
                         </a>
                     </label>
