--- a/templates/settings/plugins.html
+++ b/templates/settings/plugins.html
@@ -58,7 +58,7 @@
 
             <div class="col-md-12 well">
                 See the for plugin instruction.
-                <a href="https://github.com/nosmokingbandit/Watcher3/wiki/Plugins", target="_blank">
+                <a href="https://github.com/nosmokingbandit/Watcher3/wiki/Plugins", target="_blank" rel="noopener">
                     <i class="mdi mdi-help-circle-outline"></i>
                 </a>
 
