--- a/templates/settings/postprocessing.html
+++ b/templates/settings/postprocessing.html
@@ -31,7 +31,7 @@
             <h1>Postprocessing</h1>
 
             <div class="col-md-12 well">
-                See the <a href="https://github.com/nosmokingbandit/watcher3/wiki", target="_blank">Wiki</a> for help configuring your download client.
+                See the <a href="https://github.com/nosmokingbandit/watcher3/wiki", target="_blank" rel="noopener">Wiki</a> for help configuring your download client.
             </div>
 
             <form class="form-horizontal well" data-category="postprocessing">
@@ -148,7 +148,7 @@
             </form>
 
             <h1>Remote Mapping</h1>
-            <a href="https://github.com/nosmokingbandit/Watcher3/wiki/Remote-Mapping" target="_blank">
+            <a href="https://github.com/nosmokingbandit/Watcher3/wiki/Remote-Mapping" target="_blank" rel="noopener">
                 <i class="mdi mdi-help-circle-outline"></i>
             </a>
             <form class="form-horizontal well" data-category="remote_mapping">
