Fix images in movie details modal

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -3,7 +3,7 @@
     <head>
         ${head}
         <link href="${url_base}/static/css/add_movie.css?v=06.08" rel="stylesheet">
-        <script src="${url_base}/static/js/add_movie.js?v=06.20" type="text/javascript"></script>
+        <script src="${url_base}/static/js/add_movie.js?v=07.08" type="text/javascript"></script>
     </head>
     <body>
         ${navbar}
@@ -82,7 +82,7 @@
                         <div class="modal-body">
 
                             <div class="col-md-5">
-                                <img src="{poster_path}" class="img-responsive">
+                                <img src="{poster_url}" class="img-responsive">
                             </div>
                             <div class="col-md-7">
                                 <div class="embed-responsive embed-responsive-16by9">
