--- a/static/css/themes/Light.less
+++ b/static/css/themes/Light.less
@@ -29,7 +29,7 @@
 @font-color-main: #212121;
 @font-color-muted: #9E9E9E;
 @font-color-main-inverse: #FFFFFF;
-@font-color-label: @font-color-main;
+@font-color-label: #FFFFFF;
 @font-color-hidden: transparent;
 
 // Colors for Search Result and Movie status
