--- a/static/css/themes/Light.less
+++ b/static/css/themes/Light.less
@@ -99,3 +99,10 @@
 @bg-color-code: #FFEBEE;
 @bg-color-table-hover: #F5F5F5;
 @carousel-indicator: #000000;
+
+
+@media(max-width: 768px){
+    .navbar-nav .open .dropdown-menu>li>a {
+        color: @font-color-main-inverse;
+    }
+}
