Fix width of login fields on wide screens
Add style.css to html, shrinks main container size to be consistent with the rest of the application.

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
         <link href="${url_base}/auth/static/css/login.css?v=06.02" rel="stylesheet">
         <script src="${url_base}/auth/static/js/lib/jquery.310.min.js?v=06.14" type="text/javascript"></script>
         <script src="${url_base}/auth/static/js/login.js?v=06.27" type="text/javascript"></script>
+        <link href="${url_base}/auth/static/css/style.css?v=06.07" rel="stylesheet">
         <meta name="enable_notifs" content="false" />
     </head>
     <body>
