Add current commit link

--- a/templates/settings/server.html
+++ b/templates/settings/server.html
@@ -157,6 +157,14 @@
                         Check for Updates Now
                     </a>
                 </div>
+                <div class="col-md-6">
+                    <label>Current Version Hash</label>
+                    <span class="input-group-item form-control">
+                        <a href="https://github.com/nosmokingbandit/Watcher3/commit/${version}">
+                            ${version}
+                        </a>
+                    </span>
+                </div>
             </form>
 
             <h1>Proxy</h1>
