Specify html5 doctype
Doesn't really affect anything, but keeps browser consoles from complaining.

--- a/templates/settings/quality.html
+++ b/templates/settings/quality.html
@@ -83,7 +83,7 @@ user_profiles = {k: v for k, v in config['Profiles'].items() if k != 'Default'}
 </%def>
 
 
-<!DOCTYPE>
+<!DOCTYPE HTML5>
 <html>
     <head>
         ${head}
