--- a/templates/settings/server.html
+++ b/templates/settings/server.html
@@ -16,17 +16,17 @@
             <form class="form-horizontal well" data-category="server">
 
                 <div class="col-md-6">
-                    <label>Host</label>
+                    <label>Host *</label>
                     <input type="text" id="serverhost" class="form-control" placeholder="0.0.0.0" value="${config['serverhost']}">
                 </div>
 
                 <div class="col-md-6">
-                    <label>Port</label>
+                    <label>Port *</label>
                     <input type="number" id="serverport" class="form-control" placeholder="9090" min="0" value="${config['serverport']}">
                 </div>
 
                 <div class="col-md-6">
-                    <label>Custom Webroot</label>
+                    <label>Custom Webroot *</label>
                     <div class="input-group">
                         <span class="input-group-addon box_box">
                             <i id="customwebroot" class="mdi mdi-checkbox-blank-outline c_box" value="${config['customwebroot']}"></i>
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label>Keep [X] Days of Logs</label>
+                    <label>Keep [X] Days of Logs *</label>
                     <input type="number" id="keeplog" class="form-control" min="0" placeholder="3" value="${config['keeplog']}">
                 </div>
 
@@ -59,7 +59,7 @@
             <h1>Security</h1>
             <form class="form-horizontal well" data-category="server">
                 <div class="col-md-6">
-                    <label>Password-protect Web-UI</label>
+                    <label>Password-protect Web-UI *</label>
                     <div class="input-group">
                         <span class="input-group-addon box_box">
                             <i id="authrequired" class="mdi mdi-checkbox-blank-outline c_box" value="${config['authrequired']}"></i>
@@ -80,11 +80,11 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label>SSL Cert</label>
+                    <label>SSL Cert *</label>
                     <input type="text" id="ssl_cert" class="form-control" placeholder="/path/to/cert.crt" value="${config['ssl_cert']}">
                 </div>
                 <div class="col-md-6">
-                    <label>SSL Key</label>
+                    <label>SSL Key *</label>
                     <input type="text" id="ssl_key" class="form-control" placeholder="/path/to/privatekey.key" value="${config['ssl_key']}">
                 </div>
 
@@ -232,6 +232,10 @@
                 </div>
 
             </form>
+            <p>
+                * Requires Restart
+                <br/><br/>
+            </p>
 
             <div class="btn-group">
                 <a class="btn btn-warning" data-toggle="modal" data-target="#modal_restart">
