Minor css/layout changes to status

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,9 @@
                 <span class="sr-only">Toggle navigation</span>
                 <i class="mdi mdi-menu"></i>
             </button>
-            <img src="${url_base}/static/images/logo.png" alt="" class="navbar-brand">
+            <a href="${url_base}/library/status">
+              <img src="${url_base}/static/images/logo.png" alt="" class="navbar-brand">
+            </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
