Fix user for transmission downloader

--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -323,7 +323,7 @@
                         </div>
                         <div class="col-md-6">
                             <label>User</label>
-                            <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['Transmission']['pass']}">
+                            <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['Transmission']['user']}">
                         </div>
                         <div class="col-md-6">
                             <label>Password</label>
