--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,6 +134,16 @@ ul.nav > li > a{
     vertical-align: middle;
 }
 
+.thinker_small{
+    transition: none;
+    display: none;
+    width: 100%;
+    font-size: 2em;
+    padding: 0.5em 0;
+	opacity: 1;
+    text-align: center;
+}
+
 /* Always hide hacks at the bottom and hope nobody sees it */
 
 /* Bootstrap adds a padding-right of 17px when opening modals. I'm not sure why.
