Add settings/system page
A page with a quick overview of the server's status and a few helpful commands

Basic info: Server time, working directory, database file and size, config file, launch command and args

Backup: Create and restore backup via gui.  Adds 3rd party javascript lib liteuploader to help with upload restore zips. 

Task scheduler overview: Chart showing tasks enabled in the scheduler and their frequency, last execution time, and next execution time. Allows manual-execution of any task at user's discretion and updates table after success.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -89,6 +89,11 @@
                                 <i class="mdi mdi-clipboard-text"></i> Logs
                             </a>
                         </li>
+                        <li>
+                            <a href="${url_base}/settings/system">
+                                <i class="mdi mdi-memory"></i> System
+                            </a>
+                        </li>
                         <li class="divider"></li>
                         %if show_logout:
                         <li data-toggle="modal" data-target="#modal_logout">
